k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doomskillsweb
  labels:
    app: doomskillsweb
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: doomskillsweb
